[tool.poetry]
name = "pycounts_amm"
version = "0.1.0"
description = "This package consists of a function that can be used to count the number of words in a text file."
authors = ["Abdul Moid Mohammed"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
